--- a/src/domain/app/layout/container.module.scss
+++ b/src/domain/app/layout/container.module.scss
@@ -1,28 +1,26 @@
-@import "layout";
-@import "variables";
+@import 'layout';
+@import 'variables';
 
 .container {
-    display: grid;
-
-    padding-bottom: $containerPaddingBottom;
+  display: grid;
 }
 
 @include respond-between(sm, xlg) {
-    .container {
-        grid-template-columns: 1fr 10fr 1fr;
+  .container {
+    grid-template-columns: 1fr 10fr 1fr;
 
-        & > * {
-            grid-column: 2;
-        }
+    & > * {
+      grid-column: 2;
     }
+  }
 }
 
 @include respond-above(xlg) {
-    .container {
-        grid-template-columns: 1fr minmax(auto, $containerMaxWidth) 1fr;
+  .container {
+    grid-template-columns: 1fr minmax(auto, $containerMaxWidth) 1fr;
 
-        & > * {
-            grid-column: 2;
-        }
+    & > * {
+      grid-column: 2;
     }
+  }
 }
